[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sox"
version = "0.0.1"
authors = [
    {name = "Ali Hemmatifar", email = "alihemmati19@gmail.com"},
]
description = "Playground for exploring battery state estimation methods."
readme = "README.md"
dependencies = [
    "pybamm[all]",  # for battery models
    "jupyter",  # for notebooks
    "plotly",  # for plotting
    "matplotlib",  # for plotting
    "ipywidgets",  # for interactive plots
]

[project.optional-dependencies]
dev = [
    "black[jupyter]",  # for formatting
    "ruff",  # for linting
    "mypy",  # for type checking
    "pre-commit",  # for pre-commit hooks
    "pytest",  # for testing
    "pytest-cov",  # for test coverage
]
docs = [
    "sphinx",  # for generating html docs
    "sphinx-autoapi",  # for generating api docs
    "furo",  # for sphinx theme
    "myst-nb",  # for jupyter notebooks in sphinx
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# List of files to include as package data
[tool.setuptools.package-data]
"*" = ["*.csv", "*.txt", "*.md", "*.ipynb"]

[project.urls]
Homepage = "https://github.com/ahemmatifar/sox"
Issues = "https://github.com/ahemmatifar/sox/issues"
Documentation = "https://sox.readthedocs.io/en/latest/index.html"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    "I001",  # isort
]

[tool.mypy]
exclude = [
    "venv",
    ".venv",
]